--- a/AvaloniaUIHelp/AvaloniaUIHelp/AvaloniaUIHelp.csproj
+++ b/AvaloniaUIHelp/AvaloniaUIHelp/AvaloniaUIHelp.csproj
@@ -1,26 +1,28 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <OutputType>WinExe</OutputType>
-    <TargetFramework>net5.0</TargetFramework>
+    <TargetFramework>netcoreapp3.0</TargetFramework>
     <Nullable>enable</Nullable>
+    <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
   </PropertyGroup>
   <ItemGroup>
-    <Folder Include="Models\" />
     <AvaloniaResource Include="Assets\**" />
   </ItemGroup>
   <ItemGroup>
     <None Remove="Assets\iconfont.ttf" />
     <None Remove="Assets\lineDragMove.png" />
+    <None Remove="Assets\Shut.png" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Avalonia" Version="0.10.3" />
     <PackageReference Include="Avalonia.Desktop" Version="0.10.3" />
     <PackageReference Include="Avalonia.Diagnostics" Version="0.10.3" />
     <PackageReference Include="Avalonia.ReactiveUI" Version="0.10.3" />
+    <PackageReference Include="ReactiveUI.Fody" Version="13.3.2" />
   </ItemGroup>
   <ItemGroup>
-    <AvaloniaResource Update="Assets\lineDragMove.png">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    <AvaloniaResource Update="Assets\shut.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </AvaloniaResource>
   </ItemGroup>
 </Project>
